# machine_learning

./: .gitignore  01_algo_busca.ipynb  03_algo_aestrela.ipynb  app.py  aula01_linear_regression.ipynb  busca_aula01.ipynb  covid19.ows  fuzzy_aula01.ipynb  fuzzy_exercicio.ipynb  main.py  modelos_agrupamento.ows  modelos_associacao.ows  modelos_classificacao.ows  modelos_linear_regresion.ows  otimizacao_aula01.ipynb  otimizacao_exercicio.ipynb  outliers.ows  preprocessamento.ows  pyproject.toml  risk_score.ows  run.ipynb  tarefas.db  tasks.db  time_series.ows  untitled.ows  visualizacao.ows
.streamlit/: config.toml
curso/08_fundamentos_machine_learning/02_classificacao/: aula01_knn.ipynb  aula02_acuracia.ipynb  aula03_precision_recall.ipynb  aula04_exercicios.ipynb
